# FaceRecongnize

./: .gitignore  TRAINING_REPORT.md  extract_essex_fixed.py  pyproject.toml  task.md  train_essex_recognition.py  train_essex_strict.py  train_face_recognition.py
docker/: run_cu128_gpu.sh
